cmake_minimum_required(VERSION 2.8.4)
project(jpeg)

set(SOURCE_FILES
    ansi2knr.c
    cdjpeg.c
    cjpeg.c
    ckconfig.c
    djpeg.c
    example.c
    jcapimin.c
    jcapistd.c
    jccoefct.c
    jccolor.c
    jcdctmgr.c
    jchuff.c
    jcinit.c
    jcmainct.c
    jcmarker.c
    jcmaster.c
    jcomapi.c
    jcparam.c
    jcphuff.c
    jcprepct.c
    jcsample.c
    jctrans.c
    jdapimin.c
    jdapistd.c
    jdatadst.c
    jdatasrc.c
    jdcoefct.c
    jdcolor.c
    jddctmgr.c
    jdhuff.c
    jdphuff.c
    jdinput.c
    jdmainct.c
    jdmarker.c
    jdmaster.c
    jdmerge.c
    jdpostct.c
    jdsample.c
    jdtrans.c
    jdpostct.c
    jidctred.c
    jerror.c
    jfdctflt.c
    jfdctfst.c
    jfdctint.c
    jidctflt.c
    jidctfst.c
    jidctint.c
    jmemansi.c
    jmemmgr.c
    jmemname.c
    jmemnobs.c
    jpegtran.c
    jquant1.c
    jquant2.c
    jutils.c
    rdbmp.c
    rdcolmap.c
    rdgif.c
    rdjpgcom.c
    rdppm.c
    rdrle.c
    rdswitch.c
    rdtarga.c
    transupp.c
    wrbmp.c
    wrgif.c
    wrjpgcom.c
    wrppm.c
    wrrle.c
    wrtarga.c
)

add_library(jpeg STATIC ${SOURCE_FILES})
